# Vita-Agents

./: .env.example  .env.template  .gitignore  ARCHITECTURE_ANALYSIS.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCKER_INTEGRATION_COMPLETE.py  DOCKER_README.md  Dockerfile  END_TO_END_EXAMPLES.md  HEALTHCARE_AGENT_FRAMEWORK.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MCP_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_COMPLETE.md  PORT_UNIFICATION.md  PRODUCTION_CHECKLIST.md  README.md  RELEASE_NOTES.md  SECURITY.md  check_app_status.py  cli_test.py  config.yml  data_seeder.py  demo_all_features.py  docker-compose.yml  enhanced_cli.py  enhanced_web_portal.py  framework_compliance_summary.py  healthcare_agent_framework.py  healthcare_team_framework.py  llm_integration.py  pyproject.toml  quick_status.sh  requirements-dev.txt  requirements-mcp.txt  requirements-ui.txt  requirements.txt  (+23 more)
.github/: RELEASE_TEMPLATE.md  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  dependencies.yml  deploy.yml  issue-management.yml  labeler.yml  release.yml
config/: config.yml  ehr_config.env.example  llm_config.json
config/workflows/: ehr-bulk-export.yml  patient-data-integration.yml
docker/: Dockerfile.backend  Dockerfile.frontend  init-db.sql
docker/app/: Dockerfile
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docker/rabbitmq/: definitions.json  rabbitmq.conf
docker/redis/: redis.conf
docker/seeder/: Dockerfile
docker/worker/: Dockerfile
docs/: COMPLETE_HL7_IMPLEMENTATION_SUMMARY.md  DEVELOPMENT.md  ENHANCED_PORTAL_SUMMARY.md  FEATURES_OVERVIEW.md  FHIR_ENGINES_GUIDE.md  FRAMEWORK_COMPLIANCE_ANALYSIS.md  HEALTHCARE_AI_FRAMEWORK_COMPLIANCE_REPORT.md  HMCP_INTEGRATION.md  HMCP_MODEL_CONTEXT_PROTOCOL.md  QUICK_SUMMARY.md  RELEASE_SUMMARY.md  ROADMAP.md  STARTUP.md  TESTING_SUMMARY.md  UPGRADE_GUIDE.md  VERSION_HISTORY.md  enhanced-interfaces-guide.md  enhanced_clinical_decision_support.md  enhanced_ehr_usage.md  go-fhir-integration-plan.md  ml-data-harmonization.md
examples/: clinical_decision_support_demo.py  healthcare_mcp_workflow_demo.py  hmcp_workflows.py
k8s/: vita-agents.yaml
sample_data/: demo_patient.json  patient-1.json  patient-2.json  patient-3.json
templates/: agents.html  ai_models.html  alerts.html  analytics.html  base.html  clinical.html  compliance.html  dashboard.html  enhanced_base.html  enhanced_dashboard.html  harmonization.html  integration.html  llm_integration.html  monitoring.html  patients.html  testing.html  workflows.html
tests/: comprehensive_test_suite.py  test_enhanced_clinical_decision_agent.py  test_mcp_integration.py
tests/compliance/: __init__.py  test_compliance.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_compliance_agent.py  test_nlp_agent.py  test_security.py
vita_agents/: __init__.py  __version__.py  orchestrator.py
vita_agents/agents/: __init__.py  arden_syntax_agent.py  ccow_agent.py  cda_agent.py  cds_hooks_agent.py  claims_attachments_agent.py  clinical_decision_agent.py  compliance_security_agent.py  consent_management_agent.py  data_harmonization_agent.py  diagnostic_agent.py  ehr_agent.py  ehr_phr_functional_agent.py  enhanced_clinical_decision_agent.py  enhanced_ehr_agent.py  enhanced_fhir_agent.py  enhanced_hmcp_agent.py  fhir_agent.py  gello_expression_agent.py  healthcare_agent_framework.py  hl7_agent.py  hl7_v3_agent.py  hmcp_agent.py  mcp_compliant_hmcp_agent.py  medical_router_agent.py  ml_data_harmonization.py  ml_harmonization_integration.py  nlp_agent.py  secure_fhir_agent.py  self_reflecting_agent.py  smart_security_agent.py  spl_agent.py  triage_agent.py
vita_agents/ai_models/: advanced_imaging_ai.py  ai_governance_regulatory_compliance.py  autonomous_clinical_workflows.py  continuous_risk_scoring.py  conversational_ai_virtual_health.py  edge_computing_iot.py  explainable_ai_framework.py  laboratory_medicine_ai.py  medical_foundation_models.py  precision_medicine_genomics.py
vita_agents/api/: __init__.py  main.py
vita_agents/auth/: hmcp_authentication.py
vita_agents/cli/: __init__.py  fhir_engines_cli.py  hmcp_cli.py  main.py
web/: next.config.js  package.json
(+42 files in other folders)
